# PythonToC

./: CMakeLists.txt  README.md
assets/battles/: battle_001.json
assets/fonts/Asap/: Asap.fnt  Asap_0.tga  asa.png.fnt  asa.png_0.tga
assets/units/: unit_walk_down.ase
example/: example.cpp
include/ct/compiler/: backward.h  ct_compiler.h  py_compiler.h
include/ct/game/: ability.h  ai.h  audio.h  base_types.h  building.h  comp_position.h  comp_sprite.h  components.h  constants.h  ct_array.h  ct_stacktrace.h  engine.h  font.h  game.h  game_data.h  game_database.h  game_object.h  guild.h  image.h  input_events.h  inventory.h  item.h  map.h  mtwister.h  path_finder.h  render.h  scene_map.h  shared_ability.h  shared_item.h  shared_sprite.h  shared_unit.h  sprite.h  stats.h  stbttf_sdl.h  temp.h  test_file.h  text.h  tile.h  tween.h  ui.h  (+7 more)
lib/SDL2-2.0.12/android-project/: .project
lib/SDL2old/: CMakeLists.txt
lib/SDL2old/android-project/: .project
lib/SDL2old/include/: SDL_rect.h
lib/stb/include/: stb_ds.h  stb_image.h  stb_image_write.h  stb_rect_pack.h  stb_truetype.h
lib/stb/src/: stb_ds.c  stb_image.c  stb_image_write.c  stb_truetype.c
src/ct/: ctmain.cpp  ctrun.cpp
src/ct/compiler/: backward.cpp  ct_compiler.cpp  py_compiler.cpp
src/ct/ct_src/: audio.ct  base_types.ct  comp_position.ct  comp_sprite.ct  constants.ct  ct_array.ct  engine.ct  font.ct  game.ct  game_database.ct  game_main.ct  game_object.ct  image.ct  map.ct  render.ct  scene_map.ct  sprite.ct  temp.ct  text.ct  tile.ct  unit.ct  unit_sprite.ct  utils.ct
src/ct/game/: ability.c  ai.c  audio.c  base_types.c  building.c  comp_position.c  comp_sprite.c  components.c  constants.c  ct_array.c  ct_stacktrace.c  engine.c  font.c  game.c  game_data.c  game_database.c  game_main.c  game_object.c  guild.c  image.c  input_events.c  inventory.c  item.c  map.c  mtwister.c  path_finder.c  render.c  scene_map.c  shared_ability.c  shared_item.c  shared_sprite.c  shared_unit.c  sprite.c  stats.c  stbttf_sdl.c  temp.c  test_file.c  text.c  tile.c  tween.c  (+8 more)
src/ct/src/: ability.py  ai.py  audio.py  base_types.py  building.py  components.py  constants.py  ct_array.py  engine.py  font.py  game.py  game_data.py  game_database.py  game_main.py  game_object.py  guild.py  image.py  input_events.py  inventory.py  item.py  map.py  path_finder.py  render.py  scene_map.py  shared_ability.py  shared_item.py  shared_sprite.py  shared_unit.py  sprite.py  stats.py  text.py  tile.py  tween.py  ui.py  ui_containers.py  ui_sprite.py  unit.py  unit_sprite.py  utils.py  warp_point.py  (+1 more)
src/example/: example.cpp  math.c  math.h  math.py
